# pdns-webhook

./: Cargo.toml  Dockerfile  README.md  values.yaml
.github/workflows/: docker.yml
src/: config.rs  dns.rs  handlers.rs  lib.rs  main.rs  pdns.rs
tests/: adjust_endpoints.rs
